# Cristal

./: .gitignore  Makefile  README.md  TODO.md  clean.sh  clean1.sh  install_parallel.sh  pre_process_4_rand_extraction.py  run_extract.sh  run_extract_dag_parallel.sh  run_extract_parallel.sh  run_or_replace.sh  run_or_replace_parallel.sh  run_process_dag_json.sh  run_total_choice_mix.sh
abc/: abc.rc  add_abc.sh  (+7 more)
flussab/flussab-aiger/: Cargo.toml
flussab/flussab-aiger/aag/1/: rewritten_egraph_with_weight_cost_serd_0.aag  rewritten_egraph_with_weight_cost_serd_1.aag  rewritten_egraph_with_weight_cost_serd_2.aag  rewritten_egraph_with_weight_cost_serd_3.aag  rewritten_egraph_with_weight_cost_serd_4.aag  rewritten_egraph_with_weight_cost_serd_5.aag  rewritten_egraph_with_weight_cost_serd_6.aag  rewritten_egraph_with_weight_cost_serd_7.aag  rewritten_egraph_with_weight_cost_serd_8.aag  rewritten_egraph_with_weight_cost_serd_9.aag
flussab/flussab-aiger/aag/10/: rewritten_egraph_with_weight_cost_serd_0.aag  rewritten_egraph_with_weight_cost_serd_1.aag  rewritten_egraph_with_weight_cost_serd_2.aag  rewritten_egraph_with_weight_cost_serd_3.aag  rewritten_egraph_with_weight_cost_serd_4.aag  rewritten_egraph_with_weight_cost_serd_5.aag  rewritten_egraph_with_weight_cost_serd_6.aag  (+3 more)
flussab/flussab-aiger/cone_input_aig/: input.aig
flussab/flussab-aiger/cone_output_aag/: output.aag
flussab/flussab-aiger/cone_output_aig/: output.aig
flussab/flussab-aiger/examples/: roundtrip_aag_buffered.rs
flussab/flussab-aiger/src/: aig.rs  ascii.rs  lib.rs  main.rs  traversal.rs
(+1212 files in other folders)
